Enable batching object (cell) measurements